--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "antd": "^2.13.0",
     "antd-mobile": "^1.6.5",
+    "classnames": "^2.2.5",
+    "polished": "^1.7.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13"
+    "react-scripts": "1.0.13",
+    "styled-components": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
